Remove annoying replicated message fprintf in MPC.cpp.
git-svn-id: http://qmcpack.googlecode.com/svn@4747 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCHamiltonians/ZeroVariance.tex
+++ b/trunk/src/QMCHamiltonians/ZeroVariance.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass[letterpaper]{article}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \author{Kenneth P. Esler Jr.}
