--- a/trunk/docs/userguide.tex
+++ b/trunk/docs/userguide.tex
@@ -135,6 +135,7 @@ Kim.  More information is available at \url{http://www.mcc.uiuc.edu/qmc/}.
 \section{Sample Inputs}
 \input input_qmc
 \input input_opt
+\input conversion
 
 %See list_samples.tex for an example of xml and code fragments
 %\input list_samples
