Replaced QMCPack everywhere with QMCPACK.
git-svn-id: http://qmcpack.googlecode.com/svn@4826 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/docs/usrdoc/qmcpack-u-gs.tex
+++ b/trunk/docs/usrdoc/qmcpack-u-gs.tex
@@ -1,8 +1,8 @@
 \chapter{Getting Started}
 developer contact info here (Jeongnim? or all of us?)
-\section{Obtaining QMCPack}
+\section{Obtaining QMCPACK}
 can pretty much copy the svn instructions from google code
-\section{Building QMCPack}
+\section{Building QMCPACK}
 \subsection{Tested environments}
 discuss toolchains here
 \subsection{Compiler settings}
@@ -21,12 +21,12 @@ mention just the standard-ness of xml and postpone further discussion to next ch
 \subsection{Your first DMC calculation}
 \subsection{Understanding the output}
 mention data analysis tool and postpone discussion for two chapters
-%Obtaining QMCPack
+%Obtaining QMCPACK
 %  SVN instructions
-%Building QMCPack
+%Building QMCPACK
 %  Simple build instructions
 %  Building with toolchain files (machine specific)
-%  Building QMCPack from scratch
+%  Building QMCPACK from scratch
 %    Library Dependencies and where to obtain them
 %    Detailed build instructions
 %  Using the benchmark database to test your build
