--- a/trunk/docs/usrdoc/qmcpack-u-ov.tex
+++ b/trunk/docs/usrdoc/qmcpack-u-ov.tex
@@ -1,6 +1,6 @@
 \chapter{Overview}
 \section{What QMC calculates}
-\section{What QMCPack calculates}
+\section{What QMCPACK calculates}
 \section{QMC algorithms implemented}
 \subsection{Variational Monte Carlo}
 Refs: \cite{PhysRev.138.A442,PhysRevB.16.3081}
@@ -17,7 +17,7 @@ Refs: \cite{PhysRevLett.82.4745}
 %    Overview of DMC Method
 %    Overview of RMC Method
 %    Sources of Error in QMC Methods
-%QMCPack: an efficient implementation of QMC Methods
-%  Quantities obtainable via QMCPack
+%QMCPACK: an efficient implementation of QMC Methods
+%  Quantities obtainable via QMCPACK
 %  Scalability of QMCpack
-%  Methods implemented in QMCPack
+%  Methods implemented in QMCPACK
