--- a/trunk/docs/usrdoc/qmcpack-u-run.tex
+++ b/trunk/docs/usrdoc/qmcpack-u-run.tex
@@ -1,4 +1,4 @@
-\chapter{Running QMCPack}
+\chapter{Running QMCPACK}
 what's a good number of... threads, processors, walkers etc.
 \section{Direct execution}
 \section{Through a job queue}
