--- a/trunk/docs/usrdoc/qmcpack-u.tex
+++ b/trunk/docs/usrdoc/qmcpack-u.tex
@@ -4,7 +4,7 @@
 %\usepackage{graphicx}
 \usepackage[bookmarks=false,colorlinks=true,linkcolor={blue},pdfstartview={XYZ null null 1.22}]{hyperref}
 
-\title{QMCPack User Documentation}
+\title{QMCPACK User Documentation}
 \author{UIUC Electronic Structure Group}
 
 \begin{document}
@@ -35,23 +35,23 @@
 %    Overview of DMC Method
 %    Overview of RMC Method
 %    Sources of Error in QMC Methods
-%QMCPack: an efficient implementation of QMC Methods
-%  Quantities obtainable via QMCPack
+%QMCPACK: an efficient implementation of QMC Methods
+%  Quantities obtainable via QMCPACK
 %  Scalability of QMCpack
-%  Methods implemented in QMCPack
-%Obtaining QMCPack
+%  Methods implemented in QMCPACK
+%Obtaining QMCPACK
 %  SVN instructions
-%Building QMCPack
+%Building QMCPACK
 %  Simple build instructions
 %  Building with toolchain files (machine specific)
-%  Building QMCPack from scratch
+%  Building QMCPACK from scratch
 %    Library Dependencies and where to obtain them
 %    Detailed build instructions
 %  Using the benchmark database to test your build
 %  Known Good Configurations (combinations of library versions that work)
 %  Known version conflicts
 %  Who to contact if you are experiencing difficulties
-%Using QMCPack
+%Using QMCPACK
 %  Start to finish walkthrough of a basic system (e.g. Si total energy)
 %    Navigating the input file
 %    Preparing DFT Orbitals
@@ -59,7 +59,7 @@
 %    Your First VMC Calculation
 %    Your First DMC Calculation
 %    Analyzing output data
-%  Files used by QMCPack
+%  Files used by QMCPACK
 %  Complete input file reference
 %    Specifying the system
 %    Specifying the wavefunction
