Adding an incomplete chapter on the conversion tools.
git-svn-id: http://qmcpack.googlecode.com/svn@4827 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/docs/usrdoc/qmcpack-u.tex
+++ b/trunk/docs/usrdoc/qmcpack-u.tex
@@ -15,6 +15,7 @@
 \include{qmcpack-u-gs}	%getting started
 \include{qmcpack-u-cnf}	%configuring
 \include{qmcpack-u-run}	%running
+\include{conversion}
 \appendix
 \include{qmcpack-u-ex}	%examples tested against other qmc codes
 \clearpage
