--- a/trunk/docs/conversion.tex
+++ b/trunk/docs/conversion.tex
@@ -1,4 +1,4 @@
-\part{Conversion utilites for QMCPACK}\label{conversion.part}
+\part{Conversion and visualization utilites for QMCPACK}\label{conversion.part}
 This part describes external utilities that are used to generate
 required input files for QMCPACK
 
@@ -23,7 +23,7 @@ of common electronic structure codes:
 
 \begin{table}[H]
 \centering
-\begin{tabular}{|c|c|c|c|c|}
+\begin{tabular}{|c|c|c|c|}
 \hline
 Source format            & source basis & conversion tool & output format \\\hline
 ABINIT                   & Plane waves  & wfconv          & ES-HDF \\
@@ -38,5 +38,16 @@ GAUSSIAN                 & Gaussians    & convert4qmc     & XML    \\
 
 \subsection{Using wfconv}
 \subsubsection{ABINIT}
+\tt{istwfk 1}
+\subsubsection{CASINO}
+\subsubsection{GAMESS}
+\subsubsection{Qbox}
+\subsection{Using the mixed-basis representation}
 
-\subsubsection
+\subsection{Converting from PWscf}
+
+
+\section{Visualizing orbitals with wfvis}
+\subsection{Building}
+\subsection{Basic operations}
+\subsection{Ray-tracing for publication-quality results}
