some wiki content copied over, some formatting added
git-svn-id: http://qmcpack.googlecode.com/svn@4848 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/docs/usrdoc/conversion.tex
+++ b/trunk/docs/usrdoc/conversion.tex
@@ -44,7 +44,7 @@ GAUSSIAN                 & G   & convert4qmc  & G   & XML    \\
 
 \subsection{Using wfconv}
 \subsubsection{ABINIT}
-\tt{istwfk 1}
+\texttt{istwfk 1}
 \subsubsection{CASINO}
 \subsubsection{GAMESS}
 \subsubsection{Qbox}
