--- a/trunk/docs/usrdoc/qmcpack-u.bib
+++ b/trunk/docs/usrdoc/qmcpack-u.bib
@@ -83,3 +83,22 @@
   owner = {iibewegung},
   timestamp = {2010.05.21}
 }
+
+@BOOK{Fetter2003,
+  title = {Quantum Theory of Many-Particle Systems},
+  publisher = {Dover},
+  year = {2003},
+  author = {A. L. Fetter and J. D. Walecka},
+  owner = {iibewegung},
+  timestamp = {2010.05.25}
+}
+
+@BOOK{Martin2003,
+  title = {Electronic Structure: Basic Theory and Practical Methods},
+  publisher = {Cambridge University Press},
+  year = {2004},
+  author = {R. M. Martin},
+  owner = {iibewegung},
+  timestamp = {2010.05.25}
+}
+
