--- a/trunk/docs/usrdoc/qmcpack-u-cnf.tex
+++ b/trunk/docs/usrdoc/qmcpack-u-cnf.tex
@@ -1,6 +1,20 @@
 \chapter{Configuring Simulations}
 %\section{Complete input file reference}
-... maybe a link to the schema once it's complete?
+%... maybe a link to the schema once it's complete?
+Why XML? We understand the cons of XML and a steep learning curve to overcome but we (at least JK) believe that the pros outweigh the cons. Especially from the developers' point, XML reflects the design of QMCPACK and makes the developers think about how the objects should be written. We recommend you (as a developer) to first write down XML element for a new object and think about how the logic works itself and with other objects. 
+
+The input xml for qmc sections are extremely simple. The major difficulties concern trial wavefunctions. The components of a trial wavefunction can be divided into
+\begin{enumerate}
+\item{} Jastrow functions: one, two, and three (no four body yet)
+\item{} Fermion wavefunction: Slater determinant, Geminal 
+\end{enumerate}
+
+Jastrow functions are rather simple but have to be defined by users.
+
+On the other hand, users seldom have to prepare Fermion wavefunctions. They are extracted from outputs of third-party packages by tools (See QMCTools). Users may have to modify the name or id of the wavefunctions but again this can be achieved by command-line options for the tools.
+
+We have not implemented backflow wavefunctions but think we can use Jastrow/Fermion to represent them. 
+
 \section{Specifying the system}
 cell and the particles
 
