--- a/trunk/docs/usrdoc/qmcpack-u-run.tex
+++ b/trunk/docs/usrdoc/qmcpack-u-run.tex
@@ -1,7 +1,18 @@
 \chapter{Running QMCPACK}
-what's a good number of... threads, processors, walkers etc.
+QMCPACK uses MPI/OpenMP hybrid method for the parallelization. The optimal choice of MPI nodes and OpenMP threads depends on
+\begin{itemize}
+\item{} how much memory one needs to store read-only one-body orbitals
+\item{} memory hierarchy.
+\end{itemize}
+
+For the common multicore chips of today, using one MPI per node and setting \verb|OMP\_NUM\_THREADS| to the number of cores of a node will work. But, if a walker can be fit into a NUMA node, it is better to use one MPI per NUMA node. For instance, on Cray XT5 with dual hex-core AMD chips, setting \verb|OMP\_NUM\_THREADS=6| will work best. [check this]
+
+Setting the number of walkers and samples can be tricky with parallel runs. The basic rule is at least one walker per thread.  See Setting samples to learn how to control QMC runs.
+
+%what's a good number of... threads, processors, walkers etc.
 \section{Direct execution}
 \section{Through a job queue}
+
 discuss portable batch system
 \section{Output and data analysis tools}
 discuss HDF5 format in more detail
