--- a/trunk/docs/usrdoc/conversion.tex
+++ b/trunk/docs/usrdoc/conversion.tex
@@ -57,3 +57,88 @@ GAUSSIAN                 & G   & convert4qmc  & G   & XML    \\
 \subsection{Building}
 \subsection{Basic operations}
 \subsection{Ray-tracing for publication-quality results}
+
+\subsection{ES-HDF file format}
+
+ES-HDF
+\begin{itemize}
+  \item format {\color{red} string}  M  ``ES-HDF''
+  \item version {\color{red} int[3]} M Major, Minor,Patch
+  \item application {\color{red} group} 
+  \item supercell   {\color{red} group}
+  \begin{itemize}
+    \item primitive\_vectors {\color{red} double[3][3]}  M primitive vectors
+    \item boundary\_conditions  {\color{red} int[3]      }  M  1 for periodic, 0 for open
+  \end{itemize}
+\end{itemize}
+%version   int   [3]   M   Major,Minor,Patch
+%schema_url   string   1   M   URL for ES-HDF schema
+%application
+%Something on who, when, why, what and how
+%supercell
+%primitive_vectors   double   [3][3]   M   primitive vectors
+%boundary_conditions   int   [3]   O   1 for periodic, 0 for open boundary
+%atoms
+%number_of_atoms   int   1   M   
+%number_of_species   int   1   M   
+%species_ids   int   [number_of_atoms]   M   
+%positions   double   [number_of_atoms][3]   O   
+%reduced_positions   double   [number_of_atoms][3]   M   
+%forces   double   [number_of_atoms][3]   O   
+%species_0
+%name   string   1   M   
+%valence_charge   int   1   M   
+%atomic_number   int   1   O   
+%pseudopotential   string   1   O   
+%mass   double   1   O   
+%species_1
+%electrons
+%number_of_electrons   int   2   M   
+%number_of_kpoints   int   1   M   
+%functional   string   1   M   
+%total_energy   double   1   M   
+%number_of_spins   int   1   M   
+%5psi_r_is_complex   bool   1   M   
+%psi_r_mesh   int   [3]   M   [0,L) excluding the end
+%density
+%number_of_gvectors   int   1   M   
+%gvectors   int   [number_of_gvectors][3]   M   
+%mesh   int   [3]   M   [0,L) excluding the end
+%spin_0
+%density_r   double   [n0][n1][n2]   M   
+%density_g   double   [number_of_gvectors][2]   M   
+%spin_1
+%kpoint_0
+%reduced_k   double   [3]   M   reduced unit, maybe reduced_k is better (JK)
+%weight   double   1   M   
+%number_of_gvectors   int   1   M   
+%gvectors   int   [number_of_gvectors][3]   M   
+%spin_0
+%number_of_states   int   1   M   
+%eigenvalues   double   [number_of_states]   M   
+%occupations   double   [number_of_states]   M   
+%state_0
+%psi_g   double   [number_of_gvectors][2]   O    
+%psi_r   double   [n0][n1][n2](if real) or [n0][n1][n2][2] (if complex)   O   
+%muffin_tin_0
+%tin_num   int   1       
+%u_lm_r   double   [num_r][(lmax+1)^2][2]       
+%du_lm_final   double   [(lmax+1)^2][2]       
+%muffin_tin_1
+%...
+%state_1
+%spin_1
+%...
+%...
+%kpoint_1
+%...
+%muffin_tins
+%number_of_tins   int   1   O   
+%muffin_tin_0
+%pos   double   3   {{{4}}}   {{{5}}}
+%lmax   int   1   {{{4}}}   {{{5}}}
+%num_radial_points   int   1   {{{4}}}   {{{5}}}
+%radial_points   int   [num_radial_points]   {{{4}}}   {{{5}}}
+%muffin_tin_1
+%...
+
