--- a/trunk/docs/usrdoc/qmcpack-u.tex
+++ b/trunk/docs/usrdoc/qmcpack-u.tex
@@ -9,7 +9,7 @@
 %\usepackage{verbatim}
 \usepackage{listings}
 \usepackage{natbib,mdwlist}
-%\usepackage[tracking=true]{microtype}
+\usepackage[tracking=true]{microtype}
 
 %\DeclareMicrotypeSet*[tracking]{my}
 %   { encoding = *,
@@ -17,7 +17,7 @@
 %     font     = */*/*/tt/* }
 
 \definecolor{codebg}{gray}{0.80}
-%\SetTracking{encoding=*,shape=tt}{-5}
+\SetTracking{encoding=*,shape=tt*}{-20}
 \lstloadlanguages{[ISO]C++}
 \newcommand{\icode}[1]{\textcolor{OliveGreen}{\texttt{#1}}}
 \newcommand{\icnsl}[1]{\textcolor{RoyalBlue}{\texttt{#1}}}
